<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:animateLayoutChanges="true"
  >

  <TextView
    android:id="@+id/txt_question"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:text="@string/checkin_dialog_question"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_title"
    />
  <TextView
    android:id="@+id/txt_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:gravity="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="BIg Movie Title"/>
  <RadioGroup
    android:id="@+id/rg_when"
    android:layout_width="0dp"
    android:layout_height="96dp"
    android:layout_marginTop="16dp"
    android:checkedButton="@+id/rb_now"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_question">
    <RadioButton
      android:id="@+id/rb_now"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/dialog_checkin_now"
      app:layout_constraintEnd_toStartOf="@+id/rb_inpast"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_question"/>
    <RadioButton
      android:id="@+id/rb_inpast"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:padding="0dp"
      android:text="@string/checkin_dialog_inhistory"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/rb_now"
      app:layout_constraintTop_toBottomOf="@+id/txt_question"/>
  </RadioGroup>
  <TextView
    android:id="@+id/txt_date"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    tools:text="14 january 2018"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/txt_time"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/rg_when"
    android:gravity="center_vertical"
    android:drawableLeft="@drawable/ic_date_range_black_24dp"
    android:drawablePadding="@dimen/material_baseline_grid_1x"
    android:visibility="gone"
    tools:visibility="visible"
    android:background="?attr/selectableItemBackgroundBorderless"
    />
  <TextView
    android:id="@+id/txt_time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/txt_date"
    app:layout_constraintTop_toBottomOf="@+id/rg_when"
    android:drawableLeft="@drawable/ic_access_time_black_24dp"
    android:drawablePadding="@dimen/material_baseline_grid_1x"
    android:gravity="center_vertical"
    android:visibility="gone"
    tools:visibility="visible"
    android:background="?attr/selectableItemBackgroundBorderless"
    tools:text="12:00"/>
</android.support.constraint.ConstraintLayout>