<resources>
    <string name="app_name">TrackOnTrakt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello, World!</string>
    <string name="title_authorize">Login on trakt</string>
    <string name="err_trakt_auth_failed">Trakt.tv authorisation failed.</string>
    <string name="action_retry">Retry</string>
    <string name="err_data_retrieval_failed">Unable to retrieve data</string>
    <string name="err_unknown">Unknown error</string>
    <string name="search_title">Search</string>
    <string name="action_logout">Logout</string>
    <string name="search_hint">Movie, show or episode name</string>
    <string name="search">Search</string>
    <string name="filter_movies">Movies</string>
    <string name="filter_shows">Shows</string>
    <string name="title_history">History</string>
    <string name="media_item_type_info">%1$s ( %2$s )</string>
    <string name="title_activity_media_detail">MediaDetailActivity</string>
    <string name="info_checkin_successful">Checkin completed.</string>
    <string name="info_checkin_already_in_progress">Checkin already in progress.</string>
    <string name="media_detail_latest_episode_separator">Latest aired episode</string>
    <string name="episode_item_number_and_season_info">%1$dx%2$02d</string>
    <string name="season_info">Season %1$d</string>
    <string name="media_title_placeholder">[Title missing]</string>
    <string name="media_detail_votes">%1$2.0f %% (%2$d votes)</string>
    <string name="label_genres">Genres</string>
    <string name="label_homepage">Homepage</string>
    <string name="label_network">Network</string>
    <string name="label_language">Language</string>
    <string name="label_status">Status</string>
    <string name="label_trailer">Trailer</string>
    <string name="season_specials_title">Specials</string>
    <string name="label_traktpage">Trakt.tv</string>
    <string name="media_detail_show_watched_stats">Watched %d times (last %s).</string>
    <string name="media_detail_next_episode_separator">Next to watch</string>
    <string name="pager_load_more">Load older</string>
    <string name="pager_loading">Loading...</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_month">This month</string>
    <string name="last_month">Last month</string>
    <string name="now_watching">Now watching</string>
    <string name="start_with_search">Lookup movie or show</string>
    <string name="dialog_checkin">Checkin</string>
    <string name="dialog_checkin_now">Watching now</string>
    <string name="checkin_dialog_inhistory">Watched in the past</string>
    <string name="checkin_dialog_question">Are you watching it now or did you watch it in the past?</string>
    <string name="about">About</string>
    <string name="about_info">
    TrackOnTrakt is an opensource Android application for tracking your watched movies and shows on the <a href="https://trakt.tv">trakt.tv</a> website. You need a trakt.tv account in order to use it.\n\nSource code can be found in <a href="https://github.com/josefadamcik/TrackOnTrakt">a repository on Github</a>.\n\nTrackOnTrakt is developed by <a href="https://josef-adamcik.cz">Josef Adamčík</a>
  </string>
    <string name="about_privacy">
        This application (TrackOnTrakt) on its own does not process, store, nor share any of your personal data. All information accessed by the TrackOnTrakt application ( = watched movies and shows) is obtained via trakt.tv API and accessed only when you, as user, authorizes the application by logging in. All data entered into the TrackOnTrakt application are sent only to the trakt.tv API. Your login and password are handled directly by trakt.tv and are not processed nor captured by this application. <a href="https://trakt.tv/privacy">The Trakt.tv service has its own privacy policy.</a>
  </string>

    <string name="about_licences">This application uses various opensource libraries. Tap for more information about their licences.</string>
    <string name="about_licenses_dialog_title">Open source licenses</string>
    <string name="login_button">Login via trakt.tv</string>
    <string name="welcome_text">TrackOnTrakt is an opensource Android application for tracking your watched movies and shows on the <a href="https://trakt.tv">trakt.tv</a> website. You need a trakt.tv account in order to use it.</string>
    <string name="about_version">Version %s build %d</string>
    <string name="about_privacy_title">Privacy</string>
    <string name="about_licences_title">Licenses</string>

</resources>
