...
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end"
            android:textAppearance="@style/MediaDetailEpisodeTitle"
            android:paddingRight="@dimen/material_baseline_grid_1x"
...
            android:layout_marginBottom="@dimen/material_baseline_grid_0.5x"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/btn_checkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:src="@drawable/ic_check_circle_black_24dp"
        android:paddingLeft="@dimen/material_baseline_grid_2x"
        android:paddingRight="@dimen/material_baseline_grid_2x"
...
