<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.josefadamcik.trackontrakt.detail.MediaDetailActivity"
    tools:showIn="@layout/activity_media_detail"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

    </android.support.v7.widget.RecyclerView>

</FrameLayout>
